--- a/main.html
+++ b/main.html
@@ -11,12 +11,15 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<table border="1" style="border-collapse:collapse;">
-		<h1><caption>Item Cart</caption></h1>
+		<caption>Item Cart</caption>
 		<tr>
+			<thead>
 			<th>Item</th>
 			<th>Price</th>
 			<th>Quantity</th>
+			</thead>
 		</tr>
+		<tbody>
 		<tr>
 			<th>Banana</th>
 			<td>₹1.00</td>
@@ -37,6 +40,7 @@
 			<td>₹12.10</td>
 			<td>8</td>
 		</tr>
+		</tbody>
 	</table>
 
 </body>
