--- a/main.html
+++ b/main.html
@@ -21,8 +21,10 @@
 		</tr>
 		<tr>
 			<th>Banana</th>
+			<tbody>
 			<td>₹1.00</td>
 			<td>3</td>
+			</tbody>
 		</tr>
 		<tr>
 			<th>Burger</th>
