--- a/main.html
+++ b/main.html
@@ -13,9 +13,11 @@
 	<table border="1" style="border-collapse:collapse;">
 		<caption>Item Cart</caption>
 		<tr>
+			<thead>
 			<th>Item</th>
 			<th>Price</th>
 			<th>Quantity</th>
+			</thead>
 		</tr>
 		<tr>
 			<th>Banana</th>
